レシオを実装

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <table id="log">
         <thead>
             <tr>
-                <th colspan="17" style="text-align:left;">現在の表示:【 <span id="logBeanType">豆の名前</span>】
+                <th colspan="18" style="text-align:left;">現在の表示:【 <span id="logBeanType">豆の名前</span>】
                     <span class="download-container">
                         <button id="downloadCSV">CSVでダウンロード📄⬇️</button></span></th>
             </tr>
@@ -215,6 +215,7 @@
                 <th>TDS</th>
                 <th>収率</th>
                 <th>判定</th>
+                <th>レシオ</th>
                 <th>湯温</th>
                 <th>粉量</th>
                 <th>湯量</th>
