googleDliveで更新対応

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
     <link rel="stylesheet" type="text/css" href="css/chekcbtn.css">
     <link rel="stylesheet"  type="text/css" href="css/faq.css">
+    <script src="js/selectCSV.js"></script>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -35,56 +36,7 @@
         <div class="input-group">
             <label for="beanType">🫘 豆の種類</label>
             <select id="beanType">
-                <option value="不明な珈琲豆">不明な珈琲豆</option>
-                <optgroup label="R3">
-                    <option value="グァテマラ ゲイシャ">グァテマラ ゲイシャ</option>
-                    <option value="グァテマラ パカマラ">グァテマラ パカマラ</option>
-                    <option value="グァテマラ Finca La Soledad H1">グァテマラ Finca La Soledad H1</option>
-                    <option value="ニカラグア マラカツーラ W">ニカラグア マラカツーラ W</option>
-                    <option value="ニカラグア La Picona パライネマ">ニカラグア La Picona パライネマ</option>
-                    <option value="ニカラグア El Povenir パカマラ N">ニカラグア El Povenir パカマラ N</option>
-                    <option value="ニカラグア La Picona マラカツーラ H">ニカラグア La Picona マラカツーラ H</option>
-                    <option value="エルサルバドル MACHUCA LA MINA">エルサルバドル MACHUCA LA MINA</option>
-                    <option value="インドネシア Padmana CM N">インドネシア Padmana CM N</option>
-                    <option value="イエメン アナエロ">イエメン アナエロ</option>
-                    <option value="インドネシア COE2023 ＃１">インドネシア COE2023 ＃１</option>
-                    <option value="ジャマイカ ブルーマウンテン">ジャマイカ ブルーマウンテン</option>
-                </optgroup>
-                <optgroup label="R5">
-                    <option value="エチオピア KONGA washed">エチオピア KONGA washed</option>
-                    <option value="中国 YUNNAN TIAN YU">中国 YUNNAN TIAN YU</option>
-                    <option value="グァテマラ SanAntonio">グァテマラ SanAntonio</option>
-                    <option value="ブラジル SuldeMinas">ブラジル SuldeMinas</option>
-                </optgroup>
-                <optgroup label="R6">
-                    <option value="ウガンダ Mt ELGON">ウガンダ Mt ELGON</option>
-                    <option value="コロンビア スプレモ カフェインレス">コロンビア スプレモ カフェインレス</option>
-                    <option value="グァテマラ MARIRIAGE">グァテマラ MARIRIAGE</option>
-                </optgroup>
-                <optgroup label="R7">
-                    <option value="ルワンダ MUZO">ルワンダ MUZO</option>
-                    <option value="エチオピア KONGA N">エチオピア KONGA N</option>
-                    <option value="ボリビア MAMANI">ボリビア MAMANI</option>
-                    <option value="タンザニア ピーベリー">タンザニア ピーベリー</option>
-                    <option value="エルサルバドル MACHUCA LA MINA">エルサルバドル MACHUCA LA MINA</option>
-                    <option value="エルサルバドル COLOZOゲイシャ">エルサルバドル COLOZOゲイシャ</option>
-                    <option value="ブラジル esperanca Topazio">ブラジル esperanca Topazio</option>
-                    <option value="ケニア SAFARI">ケニア SAFARI</option>
-                </optgroup>
-
-                <optgroup label="R5">
-                    <option value="NEW DAYS ブレンド">NEW DAYS ブレンド</option>
-                </optgroup>
-                <optgroup label="R5.5">
-                    <option value="ESP">ESP</option>
-                </optgroup>
-                <optgroup label="R7">
-                    <option value="Plic Ploc">Plic Ploc</option>
-                </optgroup>
-                <optgroup label="R8">
-                    <option value="マンデリン スマトラ SERIBU RAJA">マンデリン スマトラ SERIBU RAJA</option>
-                </optgroup>
-
+                <!-- CSVから読み込んだオプションはここに追加されます -->
             </select>
         </div>
 
@@ -457,6 +409,8 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <!--自作のJS-->
 <script src="js/scroll.js"></script>
+
+
 
 </body>
 </html>
